crates/envoy-config/fuzz/corpus/parse_bootstrap/route_with_header_matchers.yaml
node:
  id: x
  cluster: y
static_resources:
  listeners:
    - name: hcm_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: HTTP1
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: default
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api/"
                            headers:
                              - name: "x-foo"
                                exact_match: "bar"
                              - name: "x-version"
                                safe_regex_match:
                                  regex: "^v[0-9]+$"
                              - name: "x-build"
                                range_match: { start: 1, end: 100 }
                              - name: "authorization"
                                present_match: true
                              - name: "x-tag"
                                string_match:
                                  contains: "beta"
                                  ignore_case: true
                          direct_response:
                            status: 200
                            body: { inline_string: "ok\n" }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters: []
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 0 }
